--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -1,7 +1,38 @@
 {% extends "base.html" %}
 
-{% block sidebar %}
-			<li class="active"><a href="/connections">Connections</a></li>
-			<li><a href="/results">Results</a></li>
+{% block content %}
+<div class="row">
+        <div class="span3">
+          <label>
+            <h3><a href="#addconnection" data-toggle="modal">New Connection</a></h3>
+	    <p>Add new server connection </p>
+          </label>
+        </div>
+        <div class="span3">
+          <label>
+            <h3><a href="/editconnection">Edit Connection</a></h3>
+	    <p>Modify a existing connection</p>
+          </label>
+        </div>
+        <div class="span3">
+          <label>
+            <h3><a href="/deleteconnection">Delete Connection</a></h3>
+	    <p>Delete existing connections</p>
+          </label>
+        </div>
+</div>
+<div class="modal" id="addconnection">
+  <div class="modal-header">
+    <a class="close" data-dismiss="modal">×</a>
+    <h3>Modal header</h3>
+  </div>
+  <div class="modal-body">
+    <p>One fine body…</p>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn">Close</a>
+    <a href="#" class="btn btn-primary">Save changes</a>
+  </div>
+</div>
 {% endblock %}
 
