--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -21,18 +21,62 @@
           </label>
         </div>
 </div>
-<div class="modal" id="addconnection">
+
+<div class="modal hide" id="addconnection">
   <div class="modal-header">
     <a class="close" data-dismiss="modal">×</a>
-    <h3>Modal header</h3>
+    <h3>New Oracle connection</h3>
   </div>
   <div class="modal-body">
-    <p>One fine body…</p>
+    <form class="form" method="post" action="{% url 'django.contrib.auth.views.login' %}">
+	{% csrf_token %}
+	<div class="control-group">
+	  <label class="control-label">Hostname or IP</label>
+	  <div class="controls">
+	    <input type="text" class="input-large" id="id_hostname" maxlength="254" name="hostname" placeholder="Hostname or XXX.XXX.XXX.XXX">
+	  </div>
+	</div>
+	<div class="control-group">
+		<div class="control-label">
+			<label>Username</label>
+		</div>
+		<div class="controls">
+			<input type="text" class="input-large" id="id_username" maxlength="254" name="username">
+		</div>
+	</div>
+	<div class="control-group">
+		<div class="control-label">
+			<label>Password</label>
+		</div>
+		<div class="controls">
+			<input type="password" placeholder="type your password" class="input-large" id="id_password" name="password">
+		</div>
+	</div>
+	<div class="control-group">
+		<div class="control-label">
+			<label>Service or SID</label>
+		</div>
+		<div class="controls">
+			<input type="text" class="input-large" id="id_servicename" maxlength="254" name="servicename">
+		</div>
+		
+	</div>
+    </form>
   </div>
   <div class="modal-footer">
     <a href="#" class="btn">Close</a>
     <a href="#" class="btn btn-primary">Save changes</a>
   </div>
 </div>
+
+<!-- CONNECTION LIST -->
+<table border=1>
+{% for conn in connlist %}
+  <tr>
+    <td>{{ conn.connanme }}</td>
+  </tr>
+{% endfor %}
+</table>
+  
 {% endblock %}
 
