--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="row">
+<!--<div class="row">
         <div class="span3">
           <label>
             <h3><a href="#addconnection" data-toggle="modal">New Connection</a></h3>
@@ -20,8 +20,9 @@
 	    <p>Delete existing connections</p>
           </label>
         </div>
-</div>
+</div>-->
 
+<!-- MODAL ADDCONNECTION DIALOG -->
 <div class="modal hide" id="addconnection">
   <div class="modal-header">
     <a class="close" data-dismiss="modal">×</a>
@@ -69,14 +70,23 @@
   </div>
 </div>
 
-<!-- CONNECTION LIST -->
-<table border=1>
+<!-- CONNECTION LIST TABLE -->
+<div class="well">
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th>Connection Name</th><th>Hostname</th><th>Username</th><th>Service Name</th>
+    </tr>
+  </thead>
+  <tbody>
 {% for conn in connlist %}
   <tr>
-    <td>{{ conn.connanme }}</td>
+    <td>{{ conn.conname }}</td><td>{{ conn.hostname }}</td><td>{{ conn.username }}</td><td>{{ conn.servicename }}</td>
   </tr>
 {% endfor %}
+  </tbody>
 </table>
+</div>
   
 {% endblock %}
 
